--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Hello</title>
+        <title>CIS3</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
