Changed the img href to the correct location for all images, and font-icons. Also added link to font-icons above all style rules.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-
+	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">s
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/foundation.css" />
@@ -19,7 +19,7 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
   </head>
-  <body>
+  <body class="dark">
 
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -27,8 +27,8 @@
     
     	<div class="row dark">
 		<div class="large-8 columns large-offset-2 small-8 small-offset-2 title-line">
-			<a href="index.html"><img src="" data-interchange="[resources/img/CIS-v2.png, (default)], [resources/img/CIS-v2.png, (large)]">
-				<noscript><img src="resources/img/CIS-v2.png">
+			<a href="index.html"><img src="" data-interchange="[img/CIS-v2.png, (default)], [img/CIS-v2.png, (large)]">
+				<noscript><img src="img/CIS-v2.png">
 				</noscript>
 			</a>
 		</div>
@@ -105,7 +105,7 @@
 
 		<div class="row">
 			<div class="large-4 columns">
-				<img src="resources/img/Code%20Reflection%20Screen%202.jpg" class="image-max">
+				<img src="img/Code%20Reflection%20Screen%202.jpg" class="image-max">
 			</div>
 			<div class="large-8 columns">
 				<h4>This is a content section.</h4>
@@ -133,7 +133,7 @@
 
 			</div>
 			<div class="large-4 columns">
-				<img src="resources/img/MacBook%20Bench.jpg" class="image-max">
+				<img src="img/MacBook%20Bench.jpg" class="image-max">
 			</div>
 		</div>
 
@@ -145,7 +145,7 @@
 		<!--Spacing Hack-->
 
 	</div>
-	<footer class="dark full-width">
+	<footer class="dark white-text full-width">
 		<div class="large-12 columns">
 			<hr/>
 			<div class="row">
@@ -156,7 +156,7 @@
 					<ul class="inline-list right">
 						<li>
 							<a href="https://www.facebook.com/groups/cis3org/" class="collapse">
-								<i class="icon-font fa fa-facebook-square"></i>
+								<i class="icon-font fa fa-facebook-square white-text"></i>
 							</a>
 						</li>
 						<li>
