--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
+
+<head>
 
 	<meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>CIS3</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<title>CIS3</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">s
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<!-- Place favicon.ico in the root directory -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/foundation.css" />
 	<link rel="stylesheet" href="css/styles.css" />
 
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+	<script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
-  </head>
-  <body class="dark">
+</head>
 
-<!--[if lt IE 8]>
+<body class="dark">
+
+	<!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    
-    	<div class="row dark">
+
+	<div class="row dark">
 		<div class="large-8 columns large-offset-2 small-8 small-offset-2 title-line">
 			<a href="index.html"><img src="" data-interchange="[img/CIS-v2.png, (default)], [img/CIS-v2.png, (large)]">
 				<noscript><img src="img/CIS-v2.png">
@@ -46,10 +48,20 @@
 			</ul>
 		</div>
 	</div>
+	
+	
+<!--Build Nav bar here or on top-->
+	
+	
+	
+	<div class="row">
+		<div class="columns text-center large-8 columns large-offset-2 small-8 small-offset-2">
+			<h1 class="cis-title">Computer Information Systems Student's Society</h1>
+		</div>
+	</div>
+	
 
-
-
-	<!-- Navigation -->
+	<!-- Call 2 Action Image & Buttons -->
 
 	<header class="header">
 		<ul class="subnav row hide-for-small">
@@ -57,7 +69,7 @@
 			<li class=""><a href="#">New Students!</a></li>
 		</ul>
 		<section id="about-cutandfill" class=" hide-for-large hide-for-medium row small-10 medium-8 large-6">
-			<!--Spacing Hack-->
+			<!--Spacing Hack for buttons-->
 			<div class="row">
 				<p></p>
 			</div>
@@ -87,10 +99,14 @@
 
 		</section>
 	</header>
-	<!-- /navigation -->
+	<!-- /end of call 2 action section -->
 
+	
+	
+	<!--	Main Content Area	  -->
+	
 	<!--Spacing Hack-->
-	<div class="row">
+	<div class="light row">
 		<p></p>
 	</div>
 	<!--Spacing Hack-->
@@ -145,6 +161,11 @@
 		<!--Spacing Hack-->
 
 	</div>
+	
+<!--	End of main content area	-->
+	
+<!--	Start of footer	-->
+	
 	<footer class="dark white-text full-width">
 		<div class="large-12 columns">
 			<hr/>
@@ -179,26 +200,37 @@
 			</div>
 		</div>
 	</footer>
-    
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+	<script>
+		window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')
+	</script>
 	<script src="js/plugins.js"></script>
 	<script src="js/main.js"></script>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 	<script>
-	    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-	    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-	    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-	    e.src='https://www.google-analytics.com/analytics.js';
-	    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-	    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+		(function (b, o, i, l, e, r) {
+			b.GoogleAnalyticsObject = l;
+			b[l] || (b[l] =
+				function () {
+					(b[l].q = b[l].q || []).push(arguments)
+				});
+			b[l].l = +new Date;
+			e = o.createElement(i);
+			r = o.getElementsByTagName(i)[0];
+			e.src = 'https://www.google-analytics.com/analytics.js';
+			r.parentNode.insertBefore(e, r)
+		}(window, document, 'script', 'ga'));
+		ga('create', 'UA-XXXXX-X', 'auto');
+		ga('send', 'pageview');
 	</script>
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/foundation.min.js"></script>
 	<script>
 		$(document).foundation();
 	</script>
-  </body>
+</body>
+
 </html>
