Made call to action image more responsive through max and min heights.

--- a/events.html
+++ b/events.html
@@ -1,37 +1,75 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
+
+<head>
 
 	<meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>CIS3 Events</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<title>CIS3 Events</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">s
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<!-- Place favicon.ico in the root directory -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">s
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/foundation.css" />
 	<link rel="stylesheet" href="css/styles.css" />
 
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+	<script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
-  </head>
+</head>
 
 <body class="dark">
 
 
 	<!-- body content here -->
 
+	<!--Nav-->
+	<link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
+	<nav class="top-bar" data-topbar role="navigation">
+		<ul class="title-area">
+
+			<div class="logo">
+				<a href=""><img src="img/cis-favicon.png" /></a>
+			</div>
+			<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+			<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+		</ul>
+
+		<section class="top-bar-section">
+			<!-- Right Nav Section -->
+			<ul class="right text-center">
+				<li class=""><a href="index.html">Home</a></li>
+
+				<li class=""><a href="events.html">Events</a></li>
+				<li class=""><a href="events.html">Opportunities</a></li>
+				<li class="has-dropdown">
+					<a href="#">About</a>
+					<ul class="dropdown">
+						<li><a href="#">Executive Team</a></li>
+						<li><a href="#">What is CIS3</a></li>
+					</ul>
+				</li>
+			</ul>
+			<ul class="social-icons text-center">
+				<li><a href=""><i class="fi-telephone"></i></a></li>
+				<li><a href=""><i class="fi-social-linkedin"></i></a></li>
+				<li><a href=""><i class="fi-social-twitter"></i></a></li>
+				<li><a href=""><i class="fi-social-facebook"></i></a></li>
+			</ul>
+
+		</section>
+	</nav>
+	<!--/Nav-->
 	<div class="row dark">
 		<div class="large-8 columns large-offset-2 small-8 small-offset-2 title-line">
 			<a href="index.html"><img src="" data-interchange="[img/CIS-v2.png, (default)], [img/CIS-v2.png, (large)]">
-			<noscript><img src="img/CIS-v2.png">
-			</noscript>
-				</a>
+				<noscript><img src="img/CIS-v2.png">
+				</noscript>
+			</a>
 		</div>
 	</div>
 
@@ -48,27 +86,44 @@
 		</div>
 	</div>
 
+	<!--CIS TITLE-->
 
+	<div class="row">
+		<div class="columns text-center large-8 columns large-offset-2 small-8 small-offset-2">
+			<h1 class="cis-title white-text">Computer Information Systems Student's Society</h1>
+		</div>
+	</div>
 
-	<!-- Navigation -->
+	<!-- Call 2 Action Img -->
 
 	<header class="header">
+		<section id="about-cutandfill" class=" hide-for-large hide-for-medium row small-10 medium-8 large-6">
+			<!--Spacing Hack for buttons im too lazy-->
+			
+			<div class="row  hide-for-small">
+				<p></p>
+			</div>
+			<div class="row  hide-for-small">
+				<p></p>
+			</div>
+			<div class="row  hide-for-small">
+				<p></p>
+			</div>
+			<div class="row  hide-for-small">
+				<p></p>
+			</div>
+			<div class="row">
+				<p></p>
+			</div>
+			<div class="row">
+				<p></p>
+			</div>
+			<!--Spacing Hack-->
+
+		</section>
 	</header>
-	<!-- /navigation -->
-
-	<!--Spacing Hack-->
-	<div class="row">
-		<p></p>
-	</div>
-	<!--Spacing Hack-->
-
-	<div class="light row ">
-
-		<!--Spacing Hack-->
-		<div class="row">
-			<p></p>
-		</div>
-		<!--Spacing Hack-->
+	
+<!--	End of Call 2 Action-->
 
 		<div class="row">
 			<div class="small-9 columns small-centered">
@@ -105,21 +160,21 @@
 				</article>
 
 				<hr>
-				
-					<article class="event">
 
-						<div class="event-date">
-							<p class="event-month">Oct</p>
-							<p class="event-day">21</p>
-						</div>
+				<article class="event">
 
-						<div class="event-desc">
-							<h4 class="event-desc-header">Movie Night</h4>
-							<p class="event-desc-detail"><span class="event-desc-time">7:00pm to 10:00pm </span> - B230 - Event Staff: Will, Brandon</p>
-							<a href="#" class="rsvp button">RSVP &amp; Details</a>
-						</div>
+					<div class="event-date">
+						<p class="event-month">Oct</p>
+						<p class="event-day">21</p>
+					</div>
 
-					</article>
+					<div class="event-desc">
+						<h4 class="event-desc-header">Movie Night</h4>
+						<p class="event-desc-detail"><span class="event-desc-time">7:00pm to 10:00pm </span> - B230 - Event Staff: Will, Brandon</p>
+						<a href="#" class="rsvp button">RSVP &amp; Details</a>
+					</div>
+
+				</article>
 
 				<!--	  How to add an event 
 *************************************
@@ -164,7 +219,7 @@ Copy the above markup and then change everything that is capitalized.
 			<hr/>
 			<div class="row">
 				<div class="large-6 columns">
-					<p>Connect with us!</p>
+					<h5 class="white-text">Connect with us!</h5>
 				</div>
 				<div class="">
 					<ul class="inline-list right">
@@ -197,23 +252,34 @@ Copy the above markup and then change everything that is capitalized.
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+	<script>
+		window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')
+	</script>
 	<script src="js/plugins.js"></script>
 	<script src="js/main.js"></script>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 	<script>
-	    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-	    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-	    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-	    e.src='https://www.google-analytics.com/analytics.js';
-	    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-	    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+		(function (b, o, i, l, e, r) {
+			b.GoogleAnalyticsObject = l;
+			b[l] || (b[l] =
+				function () {
+					(b[l].q = b[l].q || []).push(arguments)
+				});
+			b[l].l = +new Date;
+			e = o.createElement(i);
+			r = o.getElementsByTagName(i)[0];
+			e.src = 'https://www.google-analytics.com/analytics.js';
+			r.parentNode.insertBefore(e, r)
+		}(window, document, 'script', 'ga'));
+		ga('create', 'UA-XXXXX-X', 'auto');
+		ga('send', 'pageview');
 	</script>
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/foundation.min.js"></script>
 	<script>
 		$(document).foundation();
 	</script>
-  </body>
+</body>
+
 </html>
