Updated active states, fixed nav bar spacing.

--- a/events.html
+++ b/events.html
@@ -5,13 +5,13 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>CIS3 Events</title>
+	<title>CIS3</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<!-- Place favicon.ico in the root directory -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">s
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/foundation.css" />
@@ -23,8 +23,7 @@
 
 <body class="dark">
 
-
-	<!-- body content here -->
+	<!--  Nav	-->
 
 	<!--Nav-->
 	<link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
@@ -44,7 +43,7 @@
 			<ul class="right text-center">
 				<li class=""><a href="index.html">Home</a></li>
 
-				<li class=""><a href="events.html">Events</a></li>
+				<li class="active"><a href="events.html">Events</a></li>
 				<li class=""><a href="events.html">Opportunities</a></li>
 				<li class="has-dropdown">
 					<a href="#">About</a>
@@ -55,10 +54,26 @@
 				</li>
 			</ul>
 			<ul class="social-icons text-center">
-				<li><a href=""><i class="fi-telephone"></i></a></li>
-				<li><a href=""><i class="fi-social-linkedin"></i></a></li>
-				<li><a href=""><i class="fi-social-twitter"></i></a></li>
-				<li><a href=""><i class="fi-social-facebook"></i></a></li>
+				<li>
+							<a href="https://www.facebook.com/groups/cis3org/" class="collapse">
+								<i class="icon-font-small fa fa-facebook-square white-text"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://instagram.com/cis3_mru/">
+								<i class="icon-font-small fa fa-instagram"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://twitter.com/cis3_mru">
+								<i class="icon-font-small fa fa-twitter-square"></i>
+							</a>
+						</li>
+						<li>
+							<a href="mailto:info@cis3.org">
+								<i class="icon-font-small fa fa-envelope"></i>
+							</a>
+						</li>
 			</ul>
 
 		</section>
@@ -125,7 +140,11 @@
 	
 <!--	End of Call 2 Action-->
 
-		<div class="row">
+				<div class="row">
+				<p></p>
+	</div>
+	
+		<div class="row light">
 			<div class="small-9 columns small-centered">
 				<article class="event">
 
