--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<section class="top-bar-section">
 			<!-- Right Nav Section -->
 			<ul class="right text-center">
-				<li class=""><a href="index.html">Home</a></li>
+				<li class="active"><a href="index.html">Home</a></li>
 
 				<li class=""><a href="events.html">Events</a></li>
 				<li class=""><a href="events.html">Opportunities</a></li>
@@ -53,10 +53,26 @@
 				</li>
 			</ul>
 			<ul class="social-icons text-center">
-				<li><a href=""><i class="fi-telephone"></i></a></li>
-				<li><a href=""><i class="fi-social-linkedin"></i></a></li>
-				<li><a href=""><i class="fi-social-twitter"></i></a></li>
-				<li><a href=""><i class="fi-social-facebook"></i></a></li>
+				<li>
+							<a href="https://www.facebook.com/groups/cis3org/" class="collapse">
+								<i class="icon-font-small fa fa-facebook-square white-text"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://instagram.com/cis3_mru/">
+								<i class="icon-font-small fa fa-instagram"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://twitter.com/cis3_mru">
+								<i class="icon-font-small fa fa-twitter-square"></i>
+							</a>
+						</li>
+						<li>
+							<a href="mailto:info@cis3.org">
+								<i class="icon-font-small fa fa-envelope"></i>
+							</a>
+						</li>
 			</ul>
 
 		</section>
@@ -66,9 +82,9 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-	<div class="row dark">
-		<div class="large-8 columns large-offset-2 small-8 small-offset-2 title-line">
-			<a href="index.html"><img src="" data-interchange="[img/CIS-v2.png, (default)], [img/CIS-v2.png, (large)]">
+	<div class="row dark ">
+		<div class="text-center large-8 columns large-offset-2 small-8 small-offset-2 title-line">
+			<a href="index.html"><img class="logo-max-height" src="" data-interchange="[img/CIS-v2.png, (default)], [img/CIS-v2.png, (large)]">
 				<noscript><img src="img/CIS-v2.png">
 				</noscript>
 			</a>
