Fixed font hrek links.

--- a/index.html
+++ b/index.html
@@ -104,11 +104,6 @@
 		</div>
 	</div>
 
-
-	<!--Build Nav bar here or on top-->
-
-
-
 	<div class="row">
 		<div class="columns text-center large-8 columns large-offset-2 small-8 small-offset-2">
 			<h1 class="cis-title white-text">Computer Information Systems Student's Society</h1>
@@ -118,7 +113,7 @@
 
 	<!-- Call 2 Action Image & Buttons -->
 
-	<header class="header">
+	<div class="header">
 		<ul class="subnav row hide-for-small">
 			<li class=""><a href="#">What is CIS3?</a></li>
 			<li class=""><a href="#">New Students!</a></li>
@@ -144,7 +139,7 @@
 			</div>
 
 		</section>
-	</header>
+	</div>
 	<!-- /end of call 2 action section -->
 
 
