Fixed footer columns, and fixed nav bar height on mobile.

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
 	<!--	Start of footer	-->
 
 	<footer class="dark white-text full-width">
-		<div class="large-12 columns">
+
 			<hr/>
 			<div class="row">
-				<div class="large-6 columns">
+				<div class="large-6 small-12 medium-6 columns">
 					<h5 class="white-text">Connect with us!</h5>
 				</div>
-				<div class="">
+				<div class="large-6 small-12 medium-6 columns">
 					<ul class="inline-list right">
 						<li>
 							<a href="https://www.facebook.com/groups/cis3org/" class="collapse">
@@ -239,7 +239,7 @@
 					</ul>
 				</div>
 			</div>
-		</div>
+				
 	</footer>
 
 
